...
import com.android.festivar.ui.theme.AppTheme
import com.android.festivar.ui.theme.onSurfaceMutedDark
import com.android.festivar.ui.theme.onSurfaceMutedLight
import com.google.firebase.auth.FirebaseUser

object SignUpScreenTestTags {
  const val CREATE_ACC_TITLE = "createAccTitle"
  const val EMAIL_FIELD = "emailField"
  const val PASS_FIELD = "passField"
  const val PASS_CONFIRM_FIELD = "passConfirmField"
  const val PASSWORD_MISMATCH_ERROR = "passwordMismatchError"
  const val SIGNUP_BUTTON = "signUpButton"
  const val GOOGLE_SIGNUP_BUTTON = "googleSignUpButton"
  const val LOGIN_NOW_BUTTON = "loginNowButton"
}

@Composable
fun SignUpScreen(
    modifier: Modifier = Modifier,
    credentialManager: CredentialManager? = CredentialManager.create(LocalContext.current),
...
